[FIX] Remove deprecated 'new URL'